# AI-Cortex-Memory-System

./: .clauderules  .gitignore  .mcp.json  .mcp.json.example  AI_MCP_GUIDE.md  CLAUDE.md  CORTEX_AI_INSTRUCTIONS.md  Dockerfile.api  INTEGRATION.md  INTEGRATION_GUIDE.md  README.md  README_ZH.md  chat.py  cortex_mcp_server.py  dashboard.py  demo_zh.py  docker-compose.yml  drop_table.py  headless_startup.bat  implementation_plan.md  integration_err.txt  launch_services.bat  pyproject.toml  register_startup.ps1  requirements.txt  rescue_memories.bat  run_cortex_silently.vbs  run_dashboard_8001.py  scratch_check.py  scratch_debug_graph.py  scratch_search.py  stop_services.bat
.claude/: settings.local.json
api/: README.md  __init__.py  client.py  config.py  main.py  requirements.txt
api/examples/: cli_memory_wrapper.py  openwebui_memory_tool.py  python_agent_example.py
api/routes/: __init__.py  agent.py  memories.py  search.py
api/sql/: init_memories.sql
src/: __init__.py  memory_feedback.py  memory_graph.py  memory_scheduler.py  models.py
src/core/: __init__.py  bias_detector.py  conflict_detector.py  context_builder.py  context_validator.py  embedding_drift.py  epistemic_marker.py  fact_extractor.py  index_maintenance.py  integrity.py  knowledge_graph.py  memory_bypass.py  memory_compressor.py  memory_forgetting.py  memory_index.py  memory_ranker.py  memory_store.py  memory_summarizer.py  memory_vector.py  memory_zoom.py  metabolism.py  (+7 more)
tests/: test_integration.py  test_memory_cognition.py  test_memory_graph.py  test_memory_ranker.py  test_memory_store.py
(+35 files in other folders)
