[project]
name = "cortex-memory-engine"
version = "0.1.0"
description = "A production-grade hierarchical AI memory system"
readme = "implementation_plan.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Cortex Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "faiss-cpu>=1.7.4",
    "tiktoken>=0.5.2",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "httpx>=0.26.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/cortex-team/memory-engine"
Repository = "https://github.com/cortex-team/memory-engine"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
